--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <table>
 <h1 align="center">Můj rozvrh hodin</h1>
 <table border=5px solid black; cellspacing="0" align="center">
- 
+
 <tr>
 <td><br>
 <b>Den/Hodina</b>
@@ -47,7 +47,6 @@
 <td><b>8<br>14:30-15:15</b>
 </td>
 </tr>
-
 <tr>
 <td><b>Pondělí</b></td>    
 <td>HRW</td>
@@ -77,34 +76,25 @@
     <td></td>
 </tr>
  <tr>
+<td><b>Čtvrtek</b></td>
+<td>FYZ</td>
+<td>DEJ</td>
+<td>MAT</td>
+<td>OPS</td>
+<td>CHE</td>
+<td>ANJ</td>
+<td>ČJL</td>
+
+<tr>
+<td><b>Pátek</b></td>
+<td>APS</td>
+<td>PEK</td>
+<td>ČJL</td>
+<td>MAT</td>
+<td>ANJ</td>
+<td>HRW</td>
 <td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-
-
-
-
-
-
-
-
-
-
- </tr>
-
-
-
-
-
-
-
-
-
-
+</tr>
 </table>
 </div>
 </body>
